<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--App-->
    <string name="app_name">plusTimer</string>
    <string name="ready">Ready</string>
    <string name="settings">Settings</string>

    <!--Puzzle Selection-->
    <string name="puzzle_selection">Puzzle Selection</string>
    <string name="unofficial">Fast, Unofficial</string>
    <string name="oh">OH</string>
    <string name="bld">BLD</string>
    <string name="feet">Feet</string>
    <string-array name="scrambler_names">
        <item>Square-1</item>
        <item>Skewb</item>
        <item>Pyraminx</item>
        <item>Megaminx</item>
        <item>Clock</item>
    </string-array>


    <!--Session Details-->
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="session_submitted">Session has been submitted to history list.</string>
    <string name="session_reset">Session has been reset.</string>
    <string name="reset_warning">Reset session?</string>
    <string name="reset_warning_message">You\'ll lose all solves recorded in this session!</string>
    <string name="submit_warning_message">Submit session?</string>

    <!--Timer-->
    <string name="inspecting">Inspecting…</string>
    <string name="scrambling">Scrambling…</string>
    <string name="scramble_image">Scramble Image</string>
    <string name="session_no_solves">Session is empty!\nGo do some solves!</string>
    <string name="timing">Timing…</string>

    <!--Stats-->
    <string name="solves_colon">"Solves: "</string>
    <string name="cao">Current Ao%1$d</string>
    <string name="lao">Last Ao%1$d</string>
    <string name="bao">Best Ao%1$d</string>
    <string name="number_solves">"Number of Solves: "</string>
    <string name="mean">"Mean: "</string>
    <string name="best">"Best: "</string>
    <string name="worst">"Worst: "</string>
    <string name="average">"Average: "</string>
    <string name="pb">PB: %1$s</string>
    <string name="ao">Ao%1$d</string>
    <string name="pb_ao">PB Ao%1$d: %2$s</string>
    <string name="best_times">Best Times</string>

    <!--Dialog-->
    <string name="delete">Delete</string>
    <string name="penalty">Penalty:</string>
    <string-array name="penalty_array">
        <item>None</item>
        <item>+2</item>
        <item>DNF</item>
    </string-array>
    <string name="time">Time (secs):</string>
    <string name="scramble_colon">Scramble:</string>
    <string name="timestamp">Timestamp:</string>
    <string name="invalid_scramble">Invalid scramble!</string>

    <!--History-->
    <string name="puzzletype_no_solves">This puzzle has no recorded sessions!\nGo do some solves and press Submit in Session Details to record the session.</string>

    <!--Preferences-->
    <string name="pref_inspection_title">Inspection</string>
    <string name="pref_inspection_summary">15-second WCA countdown for inspecting the cube</string>

    <string name="pref_holdtostart_title">Hold to Start</string>
    <string name="pref_holdtostart_summary">Touch and hold for 0.55 seconds before starting (like SpeedStacks timer)</string>

    <string name="pref_keepscreenon_summary">Prevent automatic sleep timeout</string>
    <string name="pref_keepscreenon_title">Keep Screen On</string>

    <string name="pref_two_row_time_summary">Hours:Minutes:Seconds on top, milliseconds on the bottom</string>
    <string name="pref_two_row_time_title">Two Row Display</string>

    <string name="pref_text_size_title">Text Size</string>
    <string name="pref_time_text_size_dialog_title">Set timer text size (default 100):</string>
    <string name="text_size_warning">You can\'t set a text size larger than 500!</string>

    <string name="pref_scramble_text_size_dialog_title">Set scramble text size (default 18):</string>

    <string name="pref_update_time_title">Text Updating</string>
    <string-array name="pref_update_time_list_entries">
        <item>On</item>
        <item>On, to seconds</item>
        <item>Hide</item>
    </string-array>

    <string name="pref_timer_category_title">Timer</string>
    <string name="pref_scrambles_category_title">Scrambles</string>

    <string name="pref_milliseconds_title">Use Milliseconds (0.001)</string>

    <string name="pref_sign_title">Use SiGN Notation</string>

    <string name="puzzle_types_setup">Enable/Disable Puzzle Types</string>
    <string name="no_disable_all_puzzletypes">You can\'t disable all puzzle types!</string>

    <string name="pref_theme_title">Theme</string>
    <string-array name="pref_theme_list_entries">
        <item>Light</item>
        <item>Dark</item>
        <item>Black</item>
    </string-array>

    <string name="pref_monospace_scrambles_title">Monospace scramble font</string>

    <string name="pref_lock_swiping_title">Lock swiping between tabs</string>
    <string name="pref_lock_swiping_summary">Switch only by pressing the tabs at the top</string>

    <!--Titles-->
    <string name="current_session">Current Session</string>
    <string name="history">History</string>
    <string name="current">Current</string>
    <string name="help">Help</string>
    <string name="about">About &amp; Feedback</string>

    <string-array name="current_session_page_titles">
        <item>Timer</item>
        <item>Session Details</item>
    </string-array>

    <!--About-->
    <string name="icon">Icon</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="github">GitHub</string>
    <string name="email">Send feedback</string>
    <string name="rate">Rate on the Play Store</string>

    <!--ToolBar-->
    <string name="manual_add_solve">Add Solve</string>
    <string name="share">Share</string>
    <string name="share_dialog_title">Share times via…</string>
    <string name="send_email">Send email to the developer using…</string>
    <string name="email_developer_history_data">Email History Data to Developer</string>
    <string name="undo">Undo</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_subtitle">Sync your solves across devices</string>
    <string name="changelog">Changelog</string>

</resources>