<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/nav_group_sections"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_current"
            android:icon="@drawable/ic_timer_black_24dp"
            android:title="@string/current_session" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/history" />
    </group>

    <group
        android:id="@+id/nav_group_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/about" />
    </group>
</menu>