<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@id/dialog_solve_time_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal|textNoSuggestions"
        android:textSize="16sp"
        app:floatingLabel="highlight"
        app:floatingLabelAlwaysShown="true"
        app:floatingLabelText="@string/time"
        app:primaryColor="@color/accent" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@id/dialog_solve_timestamp_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:focusable="false"
        android:textSize="16sp"
        app:floatingLabel="highlight"
        app:floatingLabelAlwaysShown="true"
        app:floatingLabelText="@string/timestamp"
        app:hideUnderline="true"
        app:primaryColor="@color/accent" />


    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@id/dialog_solve_scramble_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:imeOptions="actionDone"
        android:inputType="textMultiLine|textNoSuggestions"
        android:textSize="16sp"
        app:floatingLabel="highlight"
        app:floatingLabelAlwaysShown="true"
        app:floatingLabelText="@string/scramble_colon"
        app:primaryColor="@color/accent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/penalty"
        android:textColor="?editTextLabelColor"
        android:textSize="12sp" />

    <Spinner
        android:id="@id/dialog_solve_modify_penalty_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|fill_horizontal"
        android:background="?selectableItemBackground"
        android:dropDownHorizontalOffset="32dp"
        android:translationX="-16dp" />
</LinearLayout>