<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ListView
        android:id="@id/android:list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:divider="@null"
        android:paddingBottom="8dp"
        android:paddingTop="16dp" />

    <TextView
        android:id="@id/android:empty"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/session_no_solves"
        android:visibility="gone" />

    <LinearLayout
        android:id="@id/fragment_solvelist_submit_reset_linearlayout"
        style="?android:buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?colorPrimary"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@id/fragment_solvelist_reset_button"
            style="?android:buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/item_background_dark"
            android:text="@string/reset" />

        <Button
            android:id="@id/fragment_solvelist_submit_button"
            style="?android:buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/item_background_dark"
            android:text="@string/submit" />

    </LinearLayout>


</LinearLayout>