<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e5e5e5"/>

    <LinearLayout
        android:id="@id/nav_drawer_footer_settings_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:paddingLeft="16dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/settings"
            android:src="@drawable/ic_drawer_settings"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="14dp"
            android:paddingLeft="8dp"
            android:paddingTop="14dp"
            android:text="@string/settings"
            android:textAllCaps="true"
            android:textColor="#666666"
            android:textSize="13sp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e5e5e5"/>

    <LinearLayout
        android:id="@id/nav_drawer_footer_help_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:paddingLeft="16dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/help"
            android:src="@drawable/ic_drawer_help"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="14dp"
            android:paddingLeft="8dp"
            android:paddingTop="14dp"
            android:text="@string/help"
            android:textAllCaps="true"
            android:textColor="#666666"
            android:textSize="13sp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e5e5e5"/>

    <LinearLayout
        android:id="@id/nav_drawer_footer_about_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:paddingLeft="16dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/about"
            android:src="@drawable/ic_drawer_about"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="14dp"
            android:paddingLeft="8dp"
            android:paddingTop="14dp"
            android:text="@string/about"
            android:textAllCaps="true"
            android:textColor="#666666"
            android:textSize="13sp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e5e5e5"/>


</LinearLayout>